changes the text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       are extremely popular in France as well as in other nations, and are
       typically eaten with breakfast. In some cases, croissants may also be
       filled with sweet or savory ingredient, or used like bread to make
-      croissant sandwiches.
+      croissant sandwiches. And croissant with meat - it is not ours croiisant!
     </p>
     <div class="links">
       <a href="./index.html">Homepage</a>
