--- a/photos.html
+++ b/photos.html
@@ -21,11 +21,7 @@
     <img src="./images/chocolate-croissants-2.jpg" alt="" />
     <br />
     <h2>Meat-cheese croissant</h2>
-    <img
-      src="./images/ham-and-cheese-croissant-10-eda90269990e47729363f61a0839c0e9.jpg"
-      alt=""
-    />
-    <br />
+    <span>And croissant with meat - it is not ours croiisant!!!</span>
 
     <br />
     <br />
