Add Seo markers

--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Contact us and we help you to choose right croissant for you!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
     <link rel="stylesheet" href="./styles/app.css" />
   </head>
   <body>
-    <h1>🥐 Contact us</h1>
+    <h1>🥐 Contact us to get your croissant!</h1>
     <p class="contact-us">
       To contact us to get your perfect croissant<a
         href="mailto:croissant@croissant.com"
         class="contact-mail"
+        title="contact us by mail"
         >croissant@croissant.com</a
       >
       or learn more
     </p>
     <div class="links">
-      <a href="./index.html">Homepage</a>
-      <a href="./photos.html">Photos</a>
-      <a href="./contact.html">Contact us</a>
+      <a href="./index.html" title="Home page">Back to croissant</a>
+      <a href="./photos.html" title="croissant`s photos">Photos</a>
+      <a href="./contact.html" title="contact croissant.com">Contact us</a>
     </div>
   </body>
 </html>
