--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Our croisants for you!!!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
     <link rel="stylesheet" href="./styles/app.css" />
@@ -17,12 +18,12 @@
       are extremely popular in France as well as in other nations, and are
       typically eaten with breakfast. In some cases, croissants may also be
       filled with sweet or savory ingredient, or used like bread to make
-      croissant sandwiches. And croissant with meat - it is not ours croiisant!
+      croissant sandwiches.
     </p>
     <div class="links">
-      <a href="./index.html">Homepage</a>
-      <a href="./photos.html">Photos</a>
-      <a href="./contact.html">Contact us</a>
+      <a href="./index.html" title="Home page">Home page</a>
+      <a href="./photos.html" title="croissant`s photos">Photos</a>
+      <a href="./contact.html" title="contact croissant.com">Contact us</a>
     </div>
   </body>
 </html>
