--- a/photos.html
+++ b/photos.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Croissant`s photos to make your choose easier"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photos</title>
     <link rel="stylesheet" href="./styles/app.css" />
@@ -10,18 +14,22 @@
   <body>
     <h1>Croissant`s pictures</h1>
     <div class="links">
-      <a href="./index.html">Homepage</a>
-      <a href="./photos.html">Photos</a>
-      <a href="./contact.html">Contact us</a>
+      <a href="./index.html" title="Home page">Back to croissant</a>
+      <a href="./photos.html" title="croissant`s photos">Photos</a>
+      <a href="./contact.html" title="contact croissant.com">Contact us</a>
     </div>
     <h2>Crescent shaped</h2>
-    <img src="./images/croissant-crescent-1.jpg.webp" alt="" />
+    <img src="./images/croissant-crescent-1.jpg.webp" alt="just croissant" />
     <br />
     <h2>Chocolate croissant</h2>
-    <img src="./images/chocolate-croissants-2.jpg" alt="" />
+    <img src="./images/chocolate-croissants-2.jpg" alt="Chocolate croissant" />
     <br />
     <h2>Meat-cheese croissant</h2>
-    <span>And croissant with meat - it is not ours croiisant!!!</span>
+    <img
+      src="./images/ham-and-cheese-croissant-10-eda90269990e47729363f61a0839c0e9.jpg"
+      alt="bacon&cheese croissant"
+    />
+    <br />
 
     <br />
     <br />
